Changes for #150 - update exomiser-data-genome package to build separate clinvar.mv.db file Add new ClinVarBuildRunner class Deprecate ClinVarWhiteListBuildRunner Deprecate ClinVarWhiteListFileAlleleIndexer Add new AssemblyResources.clinVarAlleleResource method Remove clinvar from AssemblyResources.alleleResources