@@ -26,6 +26,7 @@ import org.monarchinitiative.exomiser.core.genome.jannovar.TranscriptSource;
 import org.monarchinitiative.exomiser.data.genome.config.AssemblyResources;
 import org.monarchinitiative.exomiser.data.genome.model.AlleleResource;
 import org.monarchinitiative.exomiser.data.genome.model.BuildInfo;
+import org.monarchinitiative.exomiser.data.genome.model.resource.ClinVarAlleleResource;
 import org.monarchinitiative.exomiser.data.genome.model.resource.sv.SvResource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -36,8 +37,6 @@ import org.springframework.stereotype.Component;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * Main logic for building the exomiser hg37 genome data distribution.
@@ -113,7 +112,7 @@ public class BuildRunner implements ApplicationRunner {
         if (shouldBuildAllData(args, optionalArgs)) {
             logger.info("BUILDING ALLL THIe THINGS!");
             buildTranscriptData(buildInfo, outPath, List.of(TranscriptSource.values()));
-            buildClinVarData(buildInfo, outPath, alleleResources.get("clinvar"));
+            buildClinVarData(buildInfo, outPath, assemblyResources.getClinVarResource());
             buildVariantData(buildInfo, outPath, new ArrayList<>(alleleResources.values()));
             buildGenomeData(buildInfo, outPath, assemblyResources);
         }
@@ -125,7 +124,7 @@ public class BuildRunner implements ApplicationRunner {
         }
 
         if (args.containsOption(BUILD_CLINVAR)) {
-            AlleleResource clinVarResource = alleleResources.get("clinvar");
+            ClinVarAlleleResource clinVarResource = assemblyResources.getClinVarResource();
             buildClinVarData(buildInfo, outPath, clinVarResource);
         }
 
@@ -157,17 +156,17 @@ public class BuildRunner implements ApplicationRunner {
         transcriptDataBuildRunner.run();
     }
 
-    private void buildClinVarData(BuildInfo buildInfo, Path outPath, AlleleResource clinVarResource) {
-        logger.info("Creating ClinVar variant whitelist");
+    private void buildClinVarData(BuildInfo buildInfo, Path outPath, ClinVarAlleleResource clinVarResource) {
+        logger.info("Creating ClinVar database...");
         ResourceDownloader.download(clinVarResource);
-        ClinVarWhiteListBuildRunner clinVarWhiteListBuildRunner = new ClinVarWhiteListBuildRunner(buildInfo, outPath, clinVarResource);
+        ClinVarBuildRunner clinVarWhiteListBuildRunner = new ClinVarBuildRunner(buildInfo, outPath, clinVarResource);
         clinVarWhiteListBuildRunner.run();
     }
 
     private void buildVariantData(BuildInfo buildInfo, Path outPath, List<AlleleResource> userDefinedAlleleResources) {
         logger.info("Downloading variant resources - {}", userDefinedAlleleResources.stream()
                 .map(AlleleResource::getName)
-                .collect(toList()));
+                .toList());
         userDefinedAlleleResources.parallelStream().forEach(ResourceDownloader::download);
         logger.info("Building variant database...");
         VariantDatabaseBuildRunner variantDatabaseBuildRunner = new VariantDatabaseBuildRunner(buildInfo, outPath, userDefinedAlleleResources);
@@ -209,6 +208,6 @@ public class BuildRunner implements ApplicationRunner {
         }
         return optionValues.stream()
                 .map(TranscriptSource::parseValue)
-                .collect(toList());
+                .toList();
     }
 }
